--- a/app/src/main/res/layout/absorption_block_item.xml
+++ b/app/src/main/res/layout/absorption_block_item.xml
@@ -2,7 +2,7 @@
 <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:columnCount="4">
+    android:columnCount="5">
 
     <EditText
         android:id="@+id/absorption_block_fpu"
@@ -31,4 +31,9 @@
         android:text="@string/absorptiontime_unit"
         android:layout_gravity="fill_horizontal"
         android:layout_columnWeight="1"/>
+
+    <Button
+        android:id="@+id/button_absorptionblock_remove"
+        android:text="@string/button_remove" />
+
 </GridLayout>
