--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="info.rueth.fpucalculator.MainActivity">
+    tools:context="info.rueth.fpucalculator.presentation.ui.MainActivity">
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
@@ -19,4 +19,9 @@
         android:title="@string/action_importdb"
         app:showAsAction="never" />
     -->
+    <item
+        android:id="@+id/action_editabsorptionscheme"
+        android:orderInCategory="300"
+        android:title="@string/action_editabsorptionscheme"
+        app:showAsAction="never" />
 </menu>
