--- a/app/src/main/res/layout/activity_editabsorptionscheme.xml
+++ b/app/src/main/res/layout/activity_editabsorptionscheme.xml
@@ -5,6 +5,13 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline_center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.5" />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerview_absorptionblock"
         android:layout_width="match_parent"
@@ -23,24 +30,42 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="8dp"/>
 
+    <!-- Buttons -->
+
+    <Button
+        android:id="@+id/button_absorptionscheme_save"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:background="@color/colorPrimary"
+        android:text="@string/button_save"
+        android:textColor="@color/buttonLabel"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_absorptionblock_add" />
+
     <Button
         android:id="@+id/button_absorptionscheme_reset"
-        android:text="@string/button_reset"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/button_absorptionblock_add"
+        android:layout_marginTop="8dp"
+        android:background="@color/colorPrimary"
+        android:text="@string/button_reset"
+        android:textColor="@color/buttonLabel"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="8dp"/>
+        app:layout_constraintTop_toBottomOf="@id/button_absorptionscheme_save" />
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab_done"
-        app:srcCompat="@drawable/ic_done_black_24dp"
-        android:backgroundTint="@color/colorPrimary"
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/button_absorptionscheme_cancel"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:background="@color/colorPrimary"
+        android:text="@string/button_cancel"
+        android:textColor="@color/buttonLabel"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_margin="8dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_absorptionscheme_reset" />
 
 </android.support.constraint.ConstraintLayout>
