--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -1,5 +1,18 @@
 <androidx.preference.PreferenceScreen
     xmlns:app="http://schemas.android.com/apk/res-auto">
+<!--
+    <PreferenceCategory
+        app:key="category_absorptionscheme"
+        app:title="@string/category_absorptionscheme">
 
+        <EditTextPreference
+            app:key="preference_maxfpu"
+            app:title="@string/preference_maxfpu"/>
 
+        <EditTextPreference
+            app:key="preference_maxabsorptiontime"
+            app:title="@string/preference_maxabsorptiontime"/>
+
+    </PreferenceCategory>
+-->
 </androidx.preference.PreferenceScreen>
