--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -1,18 +1,24 @@
-<androidx.preference.PreferenceScreen
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-<!--
+<PreferenceScreen
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
     <PreferenceCategory
-        app:key="category_absorptionscheme"
-        app:title="@string/category_absorptionscheme">
+        android:key="category_absorptionscheme"
+        android:title="@string/category_absorptionscheme">
 
         <EditTextPreference
-            app:key="preference_maxfpu"
-            app:title="@string/preference_maxfpu"/>
+            android:key="@string/preference_maxfpu_key"
+            android:title="@string/preference_maxfpu"
+            android:summary="@string/preference_maxfpu_summary"
+            android:defaultValue="@string/preference_maxfpu_default"
+            android:inputType="numberDecimal" />
 
         <EditTextPreference
-            app:key="preference_maxabsorptiontime"
-            app:title="@string/preference_maxabsorptiontime"/>
+            android:key="@string/preference_maxabsorptiontime_key"
+            android:title="@string/preference_maxabsorptiontime"
+            android:summary="@string/preference_maxabsorptiontime_summary"
+            android:defaultValue="@string/preference_maxabsorptiontime_default"
+            android:inputType="numberDecimal" />
 
     </PreferenceCategory>
--->
-</androidx.preference.PreferenceScreen>
+
+</PreferenceScreen>
