Refactored - App to AppCompat and removed unused resources

--- a/app/src/main/res/layout/food_calc_item.xml
+++ b/app/src/main/res/layout/food_calc_item.xml
@@ -7,7 +7,7 @@
     android:focusable="true"
     android:clickable="true"
     android:layout_margin="1dp"
-    android:background="?android:attr/selectableItemBackground">
+    android:background="?attr/selectableItemBackground">
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/newmeal_fooditem"
