--- a/app/src/main/res/layout/meal_food_item.xml
+++ b/app/src/main/res/layout/meal_food_item.xml
@@ -8,7 +8,7 @@
     android:focusable="true"
     android:clickable="true"
     android:layout_margin="1dp"
-    android:background="?android:attr/selectableItemBackground">
+    android:background="?attr/selectableItemBackground">
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/meal_food_item"
