--- a/app/src/main/res/layout/activity_new_meal.xml
+++ b/app/src/main/res/layout/activity_new_meal.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
+<androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -9,7 +9,7 @@
 
     <include layout="@layout/content_new_meal" />
 
-    <android.support.design.widget.FloatingActionButton
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_calcmeal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -18,4 +18,4 @@
         android:backgroundTint="@color/colorAccent"
         app:srcCompat="@drawable/ic_forward_black_24dp" />
 
-</android.support.design.widget.CoordinatorLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
