--- a/app/src/main/res/layout/content_calc_meal.xml
+++ b/app/src/main/res/layout/content_calc_meal.xml
@@ -11,7 +11,7 @@
 
     <include layout="@layout/meal_food_item" />
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview_calc_meal"
         android:layout_width="match_parent"
         android:layout_height="0dp"
