--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -1,4 +1,4 @@
-<PreferenceScreen
+<androidx.preference.PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <PreferenceCategory
@@ -10,15 +10,15 @@
             android:title="@string/preference_maxfpu"
             android:summary="@string/preference_maxfpu_summary"
             android:defaultValue="@string/preference_maxfpu_default"
-            android:inputType="numberDecimal" />
+            android:digits="0123456789"/>
 
         <EditTextPreference
             android:key="@string/preference_maxabsorptiontime_key"
             android:title="@string/preference_maxabsorptiontime"
             android:summary="@string/preference_maxabsorptiontime_summary"
             android:defaultValue="@string/preference_maxabsorptiontime_default"
-            android:inputType="numberDecimal" />
+            android:digits="0123456789"/>
 
     </PreferenceCategory>
 
-</PreferenceScreen>
+</androidx.preference.PreferenceScreen>
