--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -24,4 +24,10 @@
         android:orderInCategory="300"
         android:title="@string/action_editabsorptionscheme"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_about"
+        android:orderInCategory="400"
+        android:title="@string/about_dialog"
+        app:showAsAction="never" />
 </menu>
