--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -8,9 +8,14 @@
         android:title="@string/action_settings"
         app:showAsAction="never" />
     <item
-        android:id="@+id/action_exportdb"
+        android:id="@+id/action_exportdb_raw"
         android:orderInCategory="200"
-        android:title="@string/action_exportdb"
+        android:title="@string/action_exportdb_raw"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_exportdb_json"
+        android:orderInCategory="250"
+        android:title="@string/action_exportdb_json"
         app:showAsAction="never" />
     <!--
     <item
